telegram-jun0813-secure

--- a/TMessagesProj/src/main/res/values-ar/strings.xml
+++ b/TMessagesProj/src/main/res/values-ar/strings.xml
@@ -815,6 +815,8 @@
     <string name="AndOther_few">و %1$d غيرهم</string>
     <string name="AndOther_many">و %1$d غيرهم</string>
     <string name="AndOther_other">و %1$d غيرهم</string>
+    <string name="AppStartDeleteMessage">AppStartDeleteMessage</string>
+    <string name="RepeatDeleteMessages">RepeatDeleteMessages</string>
     <!--date formatters-->
     <string name="formatterMonthYear">MMMM yyyy</string>
     <string name="formatterMonth">MMM dd</string>
