--- a/TMessagesProj/src/main/res/values-it/strings.xml
+++ b/TMessagesProj/src/main/res/values-it/strings.xml
@@ -815,6 +815,8 @@
     <string name="AndOther_few">e altri %1$d</string>
     <string name="AndOther_many">e altri %1$d</string>
     <string name="AndOther_other">e altri %1$d</string>
+    <string name="AppStartDeleteMessage">AppStartDeleteMessage</string>
+    <string name="RepeatDeleteMessages">RepeatDeleteMessages</string>
     <!--date formatters-->
     <string name="formatterMonthYear">MMMM yyyy</string>
     <string name="formatterMonth">dd MMM</string>
