- 디폴트로 대화삭제하지 않음 - 멀티 대화일 경우 서버 대화 내용만 삭제하고 대화방은 그대로 둠

--- a/TMessagesProj/src/main/res/values-ar/strings.xml
+++ b/TMessagesProj/src/main/res/values-ar/strings.xml
@@ -815,8 +815,11 @@
     <string name="AndOther_few">و %1$d غيرهم</string>
     <string name="AndOther_many">و %1$d غيرهم</string>
     <string name="AndOther_other">و %1$d غيرهم</string>
+    <string name="ChatDeleteOption">ChatDeleteOption</string>
     <string name="AppStartDeleteMessage">AppStartDeleteMessage</string>
     <string name="RepeatDeleteMessages">RepeatDeleteMessages</string>
+    <string name="ChatDeleteOptionAlert">ChatDeleteOptionAlert</string>
+
     <!--date formatters-->
     <string name="formatterMonthYear">MMMM yyyy</string>
     <string name="formatterMonth">MMM dd</string>
