--- a/TMessagesProj/src/main/res/values-ko/strings.xml
+++ b/TMessagesProj/src/main/res/values-ko/strings.xml
@@ -265,6 +265,9 @@
     <string name="AskAQuestion">질문하기</string>
     <string name="EnableAnimations">화면 전환 효과 사용</string>
     <string name="AppStartDeleteMessage">시작시 일반 대화 내용 삭제</string>
+    <string name="ChatDeleteOption">대화 삭제 옵션</string>
+    <string name="ChatDeleteOptionAlert">선택하신 옵션은 앱 재시작 또는 스케쥴러 설정을 활성화 한 경우 동작하는 기능입니다. 기본 설정은 채팅방을 제외한 모든 대화내역만 삭제됩니다.</string>
+
     <string name="Unblock">차단 해제</string>
     <string name="UnblockText">차단을 해제하려면 대화상대를 길게 누르세요.</string>
     <string name="NoBlocked">차단한 친구가 없습니다</string>
