--- a/TMessagesProj/src/main/res/values/strings.xml
+++ b/TMessagesProj/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 
 
 <resources>
-    <string name="AppName">Telegram</string>
+    <string name="AppName">Telegram++</string>
     <string name="LanguageName">English</string>
     <string name="LanguageNameInEnglish">English</string>
     <string name="LanguageCode">en</string>
@@ -629,7 +629,7 @@
     <string name="NoUsernameFound">There is no Telegram account with this username.</string>
     <string name="BotCantJoinGroups">This bot can\'t join groups.</string>
     <!--Intro view-->
-    <string name="Page1Title">Telegram</string>
+    <string name="Page1Title">Telegram++</string>
     <string name="Page2Title">Fast</string>
     <string name="Page3Title">Free</string>
     <string name="Page4Title">Secure</string>
@@ -815,8 +815,11 @@
     <string name="AndOther_many">and %1$d others</string>
     <string name="AndOther_other">and %1$d others</string>
 
-    <string name="AppStartDeleteMessage">AppStartDeleteMessage</string>
-    <string name="RepeatDeleteMessages">RepeatDeleteMessages</string>
+    <string name="ChatDeleteOption">Chat delete option</string>
+    <string name="AppStartDeleteMessage">Delete all chat history at startup</string>
+    <string name="RepeatDeleteMessages">Delete all chat history at every</string>
+    <string name="ChatDeleteOptionAlert">Default option is only chat delete. It won't be working unless you enable AppStartDeleteMessage or RepeatDeleteMessages</string>
+
     <!--date formatters-->
     <string name="formatterMonthYear">MMMM yyyy</string>
     <string name="formatterMonth">MMM dd</string>
